--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,3 +21,30 @@ h2{
 .rating span {
   margin: 0.1rem;
 }
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+display:flex;
+}  
+
+.carousel-caption{
+  position:absolute;
+  top:0;
+}
+
+.carousel-caption  h2 {
+  color:#fff;
+}
+
+.carousel img{
+  height: 300px;
+  padding: 40px;
+  margin:45px;
+  border-radius: 50%;
+}
+
+
+.carousel a{
+  margin:0 auto;
+}
